libs/stringtable/tests/snapshots/derapify__derapify_containers.snap
---
source: libs/stringtable/tests/derapify.rs
expression: out
---
<?xml version="1.0" encoding="utf-8"?>
<!-- Converted by HEMTT from stringtable.bin -->
<Project name="containers">
    <Package name="containers">
        <Key ID="A4">
            <English>Origin</English>
        </Key>
        <Key ID="A5">
            <English>EN</English>
            <German>DE</German>
        </Key>
        <Key ID="A1">
            <English>Origin</English>
        </Key>
        <Key ID="A2">
            <English>EN</English>
            <German>DE</German>
        </Key>
    </Package>
</Project>
